@@ -4,6 +4,7 @@
 ### Option: Server
 #	IP address of Zabbix server
 #	Connections from other hosts will be denied
+#	If IPv6 support is enabled then '127.0.0.1', '::127.0.0.1', '::ffff:127.0.0.1' are treated equally.
 #
 # Mandatory: yes
 # Default:
